--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,41 @@
-body{
-    background-color: aqua;
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    font-family: 'Courier New', Courier, monospace;
+    box-sizing: border-box;
 }
-h1{
-    color: brown;
-    font-size: 50px;
 
+.container{
+    max-width: 1200px;
+    padding: 0 20px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #fff;
+    box-shadow: 0 5px 10px #000;
 }
-p{
-    color: gray;
+.logo{
+    font-size: 20px;
+    font-weight: 900;
+    color: #000;
+    transition: .5s;
+}
+.logo:hover{
+    transform: scale(1.2);
+}
+
+
+body{
+    height: 100vh;
+    background: url(https://wp-s.ru/wallpapers/12/15/466982402929615/derevo-s-osennej-listvoj-abstrakciya.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+  
 }
